Pantalla de home y crear eventos con estilos

--- a/view/index.html
+++ b/view/index.html
@@ -9,44 +9,47 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/main.css">
+    </head>
 
 <body>
-    <header class="bg-dark">
-        <div>
-            <img src="../assets/logo.png" alt="">
+    <header class="bg-dark row justify-content-between header-bar mx-0">
+        <div class="col-2 bg-light logo-img px-4">
+            <img src="../assets/logo.png" class="img-fluid">
         </div>
-        <nav>
-            <ul>
-                <li><a href=""><img src="../assets/house.svg" alt=""></a></li>  
-                <li><a href=""><img src="../assets/lista.svg" alt=""></a></li> 
+        <nav class="col-10 d-flex align-content-center justify-content-end">
+            <ul class="d-flex justify-content-end align-items-center my-0">
+                <li class="d-inline px-2"><a href="./index.html"><img src="../assets/house.svg"></a></li>  
+                <li class="d-inline px-2"><a href="./nuevoEvento.html"><img src="../assets/lista.svg"></a></li> 
             </ul>
         </nav>
     </header>
-    <main>
-        <div>
-            <h1>Even tos recientes</h1>
-            <a href="">Nuevo evento</a>
+    <main class="my-5 container">
+        <div class="row justify-content-between align-items-end">
+            <h1 class="col mb-0">Eventos recientes</h1>
+            <a class="col text-end action-event mb-2" href="./nuevoEvento.html">Nuevo evento</a>
         </div>
 
-        <div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="mt-2 row justify-content-between g-4" id="list-card">
+            <!-- <div class="card" style="width: 18rem;">
+                <div class="img-card-content">
+                    <img src="../images/P04-63353.jpg" class="card-img-top" alt="...">
+                    <h5 class="card-title card-title-img m-0">Card title</h5>
                 </div>
-            </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        Sab 1, Oct 2022
+                    </p>
+                </div>
+            </div> -->
         </div>
 
     </main>
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="../js/cardImg.js"></script>
 </body>
 
 </html>
