--- a/view/nuevoEvento.html
+++ b/view/nuevoEvento.html
@@ -5,27 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Evento</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/actionEvents.css">
 </head>
 <body>
-    <div>
+    <header class="bg-dark row justify-content-between header-bar mx-0">
+        <div class="col-2 bg-light logo-img px-4">
+            <img src="../assets/logo.png" class="img-fluid">
+        </div>
+        <nav class="col-10 d-flex align-content-center justify-content-end">
+            <ul class="d-flex justify-content-end align-items-center my-0">
+                <li class="d-inline px-2"><a href="./index.html"><img src="../assets/house.svg"></a></li>  
+                <li class="d-inline px-2"><a href="./nuevoEvento.html"><img src="../assets/lista.svg"></a></li> 
+            </ul>
+        </nav>
+    </header>
+    <div class="py-4 px-5 my-4 container card-event-form">
         <h1>Crear Eventos</h1>
-        <form>
-            <div>
+        <form class="row">
+            <div class="col-6">
                 <label for="">Imagen</label>
                 <input accept="image/*" type='file' id="imgInp" />
                 <img id="blah" src="#" alt="your image" />
             </div>
-            <div>
+            <div class="col-6">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre de evento">
                 </div>
-                <div>
-                    <div class="mb-3">
+                <div class="row justify-content-between">
+                    <div class="mb-3 col-5">
                         <label for="fecha" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="fecha" name="fecha" placeholder="dd/mm/aaaa">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 col-5">
                         <label for="hora" class="form-label">Hora</label>
                         <input type="time" class="form-control" id="hora" name="hora" placeholder="hh:mm">
                     </div>
@@ -39,11 +54,13 @@
                     <textarea class="form-control" id="descripcion" name="descripcion" rows="3"></textarea>
                 </div>
             </div>
-            <div>
+            <div class="d-flex justify-content-center gx-5">
                 <button type="button" class="btn btn-danger">Crear</button>
                 <button type="button" class="btn btn-danger">Cancelar</button>
             </div>
         </form>
     </div>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
