Enlace de nuevo evento

--- a/view/comentarios.html
+++ b/view/comentarios.html
@@ -25,7 +25,7 @@
     </header>
     <section class="comentarios">
         <section class="content-item" id="comments">
-            <div class="evento">
+            <!-- <div class="evento">
                 <p id="nombre-evento">Feria de gatos</p>
                 <img src="">
                 <i class="fa-solid fa-heart"></i>
@@ -64,7 +64,7 @@
                         
                         <h3>Comentarios</h3>
                         
-                        <!-- COMMENT 1 - START -->
+                       
                         <div class="media">
                             <div class="media-body">
                                 <h4 class="media-heading">John Doe</h4>
@@ -75,11 +75,11 @@
                                 </ul>
                             </div>
                         </div>
-                        <!-- COMMENT 1 - END -->
+                       
                     
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section> 
     </section>
     
