--- a/view/nuevoEvento.html
+++ b/view/nuevoEvento.html
@@ -24,11 +24,11 @@
     </header>
     <div class="py-4 px-5 my-4 container card-event-form">
         <h1>Crear Eventos</h1>
-        <form class="row">
+        <form class="row" enctype="multipart/form-data" id="form_post">
             <div class="col-6">
                 <label for="">Imagen</label>
-                <input accept="image/*" type='file' id="imgInp" />
-                <img id="blah" src="#" alt="your image" />
+                <input accept="image/*" type='file' id="img-evento" />
+                <img id="img-evento-show" src="#" class="img-fluid"/>
             </div>
             <div class="col-6">
                 <div class="mb-3">
@@ -55,12 +55,13 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center gx-5">
-                <button type="button" class="btn btn-danger">Crear</button>
+                <button type="submit" class="btn btn-danger">Crear</button>
                 <button type="button" class="btn btn-danger">Cancelar</button>
             </div>
         </form>
     </div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script src="../js/nuevoEvento.js"></script>
 </body>
 </html>
