--- a/view/comentarios.html
+++ b/view/comentarios.html
@@ -88,7 +88,7 @@
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/13a0564b67.js" crossorigin="anonymous"></script>
-<script src="../js/intermediario.js"></script>
-<script src="../js/comentario.js"></script>
+<!-- <script src="../js/intermediario.js"></script> -->
+<script src="../js/comentario.js" type="module"></script>
 </body>
 </html>
