--- a/view/index.html
+++ b/view/index.html
@@ -48,8 +48,8 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="../js/intermediario.js"></script>
-    <script src="../js/cardImg.js"></script>
+    <!-- <script src="../js/intermediario.js"></script> -->
+    <script src="../js/cardImg.js" type="module"></script>
 </body>
 
 </html>
