--- a/view/comentarios.html
+++ b/view/comentarios.html
@@ -90,5 +90,6 @@
 <script src="https://kit.fontawesome.com/13a0564b67.js" crossorigin="anonymous"></script>
 <!-- <script src="../js/intermediario.js"></script> -->
 <script src="../js/comentario.js" type="module"></script>
+<script src="../js/nuevoC.js" type="module"></script>
 </body>
 </html>
