--- a/view/comentarios.html
+++ b/view/comentarios.html
@@ -25,7 +25,7 @@
     </header>
     <section class="comentarios">
         <section class="content-item" id="comments">
-            <!-- <div class="evento">
+            <!--<div class="evento">
                 <p id="nombre-evento">Feria de gatos</p>
                 <img src="">
                 <i class="fa-solid fa-heart"></i>
@@ -50,7 +50,7 @@
                 </div>   
                 <div class="row">
                     <div class="col-sm-8">   
-                        <form>
+                        <form enctype="multipart/form-data" id="form_post">
                             <h3 class="pull-left">Nuevo comentario</h3>
                             <button type="submit" class="btn btn-info pull-right">Enviar</button>
                             <fieldset>
@@ -79,7 +79,7 @@
                     
                     </div>
                 </div>
-            </div> -->
+            </div>-->
         </section> 
     </section>
     
@@ -90,6 +90,6 @@
 <script src="https://kit.fontawesome.com/13a0564b67.js" crossorigin="anonymous"></script>
 <!-- <script src="../js/intermediario.js"></script> -->
 <script src="../js/comentario.js" type="module"></script>
-<script src="../js/nuevoC.js" type="module"></script>
+<!--<script src="../js/nuevoC.js" type="module"></script>-->
 </body>
 </html>
