--- a/style/comentarios.css
+++ b/style/comentarios.css
@@ -155,7 +155,7 @@
 #nombre-evento{
 	font-size: 38px;
 	font-weight: bold;
-	/*padding-left: 6%;*/
+	padding-left: 7%;
 	padding-bottom: 0.8%;
 }
 
@@ -174,10 +174,20 @@
 }
 
 #regresarIcon{
-	padding-left: 600px;
+	padding-left: 800px;
 	padding-right: 5px;
 }
 
 #regresar{
 	color: #834952;
+}
+
+img{
+	max-width: 100%;
+	max-height: 100%;
+	padding-bottom: 10px;
+}
+
+h3{
+	font-weight: bold;
 }
